--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 	<link rel="stylesheet" type="text/css" href="{{ .Site.BaseUrl }}/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="{{ .Site.BaseUrl }}/css/bootstrap-theme.min.css">
 	<link rel="stylesheet" type="text/css" href="{{ .Site.BaseUrl }}/css/bootstrap-flat-extras.min.css">
+	<link rel="stylesheet" type="text/css" href="{{ .Site.BaseUrl }}/css/bootstrap-flat.min.css">
 	<link rel="stylesheet" type="text/css" href="{{ .Site.BaseUrl }}/css/style.css">
 
 	<title>{{ .Title }}</title>
