--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,14 +1,5 @@
-{{ partial "header.html" }}
-
-<nav class="navbar navbar-default">
-      <ul class="nav navbar-nav">
-      	<li><a href="/">.homepage</a></li>
-      	{{ range .Site.Pages }}
-		<li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
-		{{ end }}
-      </ul>
-</nav>
-
+{{ partial "header.html" . }}
+{{ partial "nav.html" . }}
 <div class="container">
 	<div class="row">
 		<div class="col-sm-8 col-sm-offset-2">
